app/assets/stylesheets/angular/angular.css.scss
@import '../shared/constants';
@import '../shared/utilities';

body {
  overflow-x: hidden;

  &.popover-active {
    overflow: hidden;
  }

  .slide-show, .slide-hide {
    @include transition();
  }

  .slide-show, .slide-hide.slide-hide-active {
    left: $nav-width-handhelds;
    @include respond-to(handhelds) { left: $nav-width-handhelds; }
    @include respond-to(tablets) { left: $nav-width-tablets; }
    @include respond-to(desktops) { left: $nav-width-desktops; }
  }

  .slide-show.slide-show-active, .slide-hide {
    left: 2*$nav-width-handhelds;
    @include respond-to(handhelds) { left: 2*$nav-width-handhelds; }
    @include respond-to(tablets) { left: 2*$nav-width-tablets; }
    @include respond-to(desktops) { left: 2*$nav-width-desktops; }
  }

  h1 {
    @include respond-to(handhelds) { font-size: 32px; }
  }

  h2 {
    @include respond-to(handhelds) { font-size: 22px; }
  }

  h3 {
    @include respond-to(handhelds) { font-size: 18px; }
  }

  #view {
    padding-bottom: $view-padding;
  }

  #main {
    @include transition();

    width: 100%;
  }

  #mainMenuLink {
    @include transition();

    z-index: 1004;

    &:link, &:visited, &:hover, &:active {
      color: #eee;
      text-decoration: none;
    }

    &:hover {
      background: rgba(0, 0, 0, 0.9);
    }

    position: fixed;
    padding: 10px;
    top: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.75);

    i {
      width: auto;
    }

    &.active {
      // This doesn't show up on anything other than handhelds and mobile.
      @include transform($nav-width-handhelds, 0);
      @include respond-to(tablets) { @include transform($nav-width-tablets, 0); }
    }
  }

  .header {
    min-height: 60px;
    padding: 1em 1em 0 1em;

    @include respond-to(handhelds) { padding: 0; }

    .header-buttons {
      float: right;
      margin-top: -30px;
    }

    .breadcrumbs {
      .divider {
        color: #ccc;
        font-weight: 200;
      }

      a, a:link, a:visited, a:hover, a:active {
        color: #08c;
        text-decoration: none;
      }
    }
  }

  .layout {
    @include respond-to(handhelds) {
      padding-left: $collapsed-nav-width;

      &.active #main {
        @include transform($nav-width-handhelds, 0);
      }
    }

    @include respond-to(tablets) {
      padding-left: $collapsed-nav-width;

      &.active #main {
        @include transform($nav-width-tablets, 0);
      }
    }

    @include respond-to(desktops) {
      padding-left: $nav-width-desktops;
      padding-right: 0px;
    }

    @include respond-to(widescreens) {
      padding-left: $nav-width-widescreens;
      padding-right: 0px;
    }
  }

  .content {
    width: 80%;
    margin: auto;

    @include respond-to(handhelds, tablets) {
      width: 90%;
    }
  }

  .table-header {
    margin-bottom: 20px;
    display: table;

    > * {
      display: table-cell;
    }

    .table-search {
      width: 100%;
    }

    .table-buttons {
      text-align: right;
    }
  }
}

